<resources>
    <string name="app_name">My Echo Application</string>

    <string name="title">タイトル</string>
    <string name="input">入力</string>
    <string name="result">結果</string>
    <string name="about">アバウト</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">こんにちは空白のフラグメント</string>
    <string name="settings">" 設定"</string>
    <string name="input_text">入力テキスト！</string>
    <string name="menu_apps_title">Apps</string>
    <string name="app_text">Apps</string>
    <string name="list_main_text">Listado</string>
    <string name="detail_text">Detalle</string>

</resources>
