<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/launcher_title">

    <fragment
        android:id="@+id/launcher_title"
        android:name="jp.s64.android.prototype.myechoapplication.TitleFragment"
        android:label="@string/title"
        tools:layout="@layout/title_fragment">
        <action
            android:id="@+id/action_launcher_title_to_flow_input"
            app:destination="@id/flow_input" />
        <action
            android:id="@+id/action_launcher_title_to_blankFragment"
            app:destination="@id/blankFragment" />
    </fragment>

    <fragment
        android:id="@+id/flow_input"
        android:name="jp.s64.android.prototype.myechoapplication.InputFragment"
        android:label="@string/input"
        tools:layout="@layout/input_fragment" >
        <action
            android:id="@+id/action_flow_input_to_flow_result"
            app:destination="@id/flow_result" />
    </fragment>

    <fragment
        android:id="@+id/flow_result"
        android:name="jp.s64.android.prototype.myechoapplication.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/result_fragment" >
        <argument
            android:name="input_text"
            android:defaultValue="No Input!"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/screen_about"
        android:name="jp.s64.android.prototype.myechoapplication.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/about_fragment">

        <deepLink app:uri="http://example.com/about"/>

    </fragment>
    <fragment
        android:id="@+id/screen_settings"
        android:name="jp.s64.android.prototype.myechoapplication.SettingsFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_settings">

        <deepLink app:uri="http://example.com/settings"/>

    </fragment>
    <fragment
        android:id="@+id/blankFragment"
        android:name="jp.s64.android.prototype.myechoapplication.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" >
        <action
            android:id="@+id/action_blankFragment_to_blankFragment2"
            app:destination="@id/blankFragment2" />
    </fragment>
    <fragment
        android:id="@+id/blankFragment2"
        android:name="jp.s64.android.prototype.myechoapplication.BlankFragment2"
        android:label="fragment_blank_fragment2"
        tools:layout="@layout/fragment_blank_fragment2" >
        <action
            android:id="@+id/action_blankFragment2_to_blankFragment3"
            app:destination="@id/blankFragment3" />
    </fragment>
    <fragment
        android:id="@+id/blankFragment3"
        android:name="jp.s64.android.prototype.myechoapplication.BlankFragment3"
        android:label="fragment_blank_fragment3"
        tools:layout="@layout/fragment_blank_fragment3" />
    <fragment
        android:id="@+id/appFragment"
        android:name="jp.s64.android.prototype.myechoapplication.AppFragment"
        android:label="@string/app_text"
        tools:layout="@layout/fragment_app" />

</navigation>